--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Crookview's API",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2"
   }
 }
